<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TAP</string>
    <string name="title_activity_activity_arm">Tap</string>
    <string name="title_account">Account</string>
    <string name="title_tap">Tap</string>
    <string name="title_history">History</string>
    <string name="title_tags">Tags</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tag">TagActivity</string>
    <string name="title_activity_write">WriteActivity</string>
    <string name="load_address_text">load address:</string>
    <string name="withdraw_address_text">withdraw address:</string>
    <string name="yapa_thumbnail_alt">Tap to download content</string>
    <string name="title_activity_balances">Balances</string>
    <string name="currency_icon_description">Currency Logo</string>
    <string name="scan_voucher">Bitcoin Deposit</string>
    <string name="uppercase_load">LOAD</string>
    <string name="voucher_qr_code_description">What is this?</string>
    <string name="arm">GIVE THIS AMOUNT</string>
    <string name="button_balances">BALANCES</string>
    <string name="button_load_code">LOAD CODE</string>
    <string name="button_load_bitcoin">LOAD BITCOIN</string>
    <string name="button_withdraw">WITHDRAW</string>
    <string name="button_my_tags">MY TAGS</string>
    <string name="description_profile_picture">Profile Picture</string>
    <string name="calculating">calculating…</string>
    <string name="tap">Tap</string>
    <string name="button_new_tag">CREATE NEW TAG</string>
    <string name="redeem_voucher">Enter Code To Load Balance:</string>
    <string name="redeem_button">OK</string>
    <string name="redeem_entry">Enter a redemption code here</string>
    <string name="successful_redeem">Redeemed for</string>
    <string name="currency_changed">Active currency set to</string>
    <string name="tap_encouragement">Touch the phone to the tag.</string>
    <string name="armed_graphic">Armed</string>
    <string name="amount">Amount</string>
    <string name="tag_icon_description">Tag Icon</string>
    <string name="tag_name_hint">Enter a name for the tag</string>
    <string name="save">SAVE</string>
    <string name="update">UPDATE</string>
    <string name="write">WRITE</string>
    <string name="add_yapa">ADD NEW YAPA</string>
    <string name="hint_yapa_text">Say something show your thanks</string>
    <string name="hint_yapa_content">Enter a written reward</string>
    <string name="hint_yapa_url">Enter a URL</string>
    <string name="hint_yapa_video">Enter a URL for Video</string>
    <string name="hint_yapa_audio">Enter a URL for Audio</string>

    <string name="unknown_error">An unknown error has occurred.</string>
    <string name="select_yapa_type">select yapa type</string>
    <string name="select_currency">select currency</string>
    <string name="select_yapa_text">select text yapa</string>
    <string name="select_yapa_image">select image yapa</string>
    <string name="select_yapa_url">select url yapa</string>
    <string name="select_yapa_video">select video yapa</string>
    <string name="select_yapa_audio">select audio yapa</string>
    <string name="select_yapa_coupon">select coupon yapa</string>
    <string name="yapa_image_hint">click to add an image</string>
    <string name="yapa_coupon_hint">click to add a coupon image</string>

    <string name="file_access_problem">Could not access the selected data</string>
    <string name="no_image_selected">No image was selected</string>
    <string name="tag_was_saved">Tag and all its Yapa have been saved</string>
    <string name="withdraw_button_text">W</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="done_editing">DONE</string>
    <string name="manage_tags">MANAGE TAGS</string>
    <string name="edit_nickname">Edit Nickname</string>
    <string name="enter_new_nickname">Enter a new nickname: </string>
    <string name="edit_email">Edit E-Mail</string>
    <string name="enter_new_email">Enter a new e-mail address: </string>
    <string name="positive_alert">OK</string>
    <string name="negative_alert">Cancel</string>
    <string name="default_email">no@email.addy</string>
    <string name="out_of_memory">The device is out of memory</string>
    <string name="tag_write_success">Tag successfully written</string>
    <string name="tag_read_only">The tag is read-only.</string>
    <string name="tag_too_small">The tag has too little storage space</string>
    <string name="tag_format_failed">Failed to format a tag message</string>

    <string name="select_text">Text</string>
    <string name="select_audio">Audio</string>
    <string name="select_video">Video</string>
    <string name="select_url">URL</string>
    <string name="select_coupon">Coupon</string>
    <string name="select_image">Image</string>
    <string name="single_yapa_image_click">click to view</string>
    <string name="single_yapa_url_click">click to visit</string>
    <string name="single_yapa_video_click">click to watch</string>
    <string name="single_yapa_audio_click">click to listen</string>
    <string name="single_yapa_coupon_click">click for savings</string>
    <string name="single_yapa_text_click">click to read</string>
    <string name="sender_timestamp_divider">\u0020|\u0020</string>
    <string name="yapa_exit_button">exit</string>
    <string name="no_network">There is no network available, please connect to the Internet before using this application.</string>
    <string name="no_network_title">No Network</string>
    <string name="button_network_settings">Change Network Settings</string>
    <string name="button_return_to_app">Return to Tap</string>
    <string name="wrong_currency_0">You need to use</string>
    <string name="wrong_currency_1">in order to tap this tag.</string>

</resources>
