<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:id="@+id/etTagName"
        android:hint="@string/tag_name_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ListView
        android:id="@+id/listYapa"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">
    </ListView>

    <Button
        style="@style/AppTheme.Button"
        android:id="@+id/btnNewYapa"
        android:text="@string/add_yapa"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickAddYapa"/>

    <Button
        style="@style/AppTheme.Button"
        android:id="@+id/btnSaveTag"
        android:text="@string/save"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickSave"/>

    <Button
        style="@style/AppTheme.Button"
        android:id="@+id/btnWriteTag"
        android:text="@string/write"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>