<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        style="@style/AppTheme.LargeText"
        android:layout_marginTop="48sp"
        android:gravity="center"
        android:text="@string/scan_voucher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:contentDescription="@string/voucher_qr_code_description"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:gravity="center"
        android:text="[what goes here?]"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        style="@style/AppTheme.LargeText"
        android:gravity="center"
        android:text="@string/uppercase_load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickLoadVoucher"/>

</LinearLayout>