<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/title_bar" />

    <TextView
        style="@style/AppTheme.header1"
        android:layout_marginTop="48sp"
        android:text="@string/scan_voucher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>

    <ImageView
        android:contentDescription="@string/voucher_qr_code_description"
        android:src="@drawable/b"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:text="[what goes here?]"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>

    <Button
        style="@style/AppTheme.Button"
        android:text="@string/uppercase_load"
        android:onClick="clickLoadVoucher"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>